adjusting some layout bugs

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,7 +18,7 @@ body {
 
   .iphone {
     right: 120px;
-    top: 2%;
+    top: 107%;
   }
 
   .cbp-af-header {
